2007-07-22  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb (Gem::Specification#files): Make it
	faster
	* lib/rubygems/command.rb: Better documentation
	* lib/rubygems/commands/which_command.rb, bin/gemwhich: Move `gemwhich`
	under `gem`.
	* lib/rubygems/commands/mirror_command.rb, bin/gem_mirror: Move
	`gem_mirror` under `gem`.
	* lib/rubygems/commands/lock_command.rb, bin/gemlock: Move `gemlock`
	under `gem`.
	* lib/rubygems/commands/server_command.rb, bin/gem_server: Move
	`gem_server` under `gem`.
	* lib/rubygems/doc_manager.rb (Gem::DocManager#initialize): Only raise
	when operating on the filesystem.
	* lib/rubygems/server.rb: Remove option processing, now in
	Gem::Commands::ServerCommand.
	* lib/rubygems/commands/generate_index.rb, bin/index_gem_repository.rb:
	Move `index_gem_repository.rb` to `gem generate_index`.
	* lib/rubygems/indexer (Gem::Indexer): Extract from
	index_gem_repository.rb and merge RubyForge changes.
	* lib/rubygems/command_manager.rb (Gem::CommandManager#run): Print
	backtrace when --debug is set too.
	* lib/rubygems/command_manager.rb (Gem::CommandManager#load_and_instantiate):
	Don't infinitely loop in retry.
	* bin/gemri: Everybody should have ri integration now.

2007-07-22  Chad Fowler  <chad@chadfowler.com>

        * lib/rubygems/gem_commands.rb: Added another example to the gem example output
        (Gile Bowkett)
        * test/test_documentation_generation.rb, lib/rubygems/doc_manager.rb: Added a test for
        documentation generation and fixed a bug when doc location is not writable.

2007-06-16  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/gem_path_searcher.rb (Gem::GemPathSearcher): Moved out
	of lib/rubygems/custom_require.rb and added tests.

2007-06-02  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/source_info_cache.rb (Gem::try_file): Fix for issue
	where a non-existing source cache file causes the gem command to
	not find a gem.  This fixes it by marshalling out an empty